--- a/src/core/utility/CMakeLists.txt
+++ b/src/core/utility/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(${TARGET}
 	PRIVATE
 		"${CMAKE_CURRENT_LIST_DIR}/utility.h"
+		"${CMAKE_CURRENT_LIST_DIR}/cstring_utility.h"
 		"${CMAKE_CURRENT_LIST_DIR}/type_traits.h"
 )
