--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(${TARGET}
 	PRIVATE
 		"${CMAKE_CURRENT_LIST_DIR}/dll_definitions.h"
+		"${CMAKE_CURRENT_LIST_DIR}/compiler_definitions.h"
 		"${CMAKE_CURRENT_LIST_DIR}/common.h"
 		"${CMAKE_CURRENT_LIST_DIR}/memory.h"
 		"${CMAKE_CURRENT_LIST_DIR}/debug.h"
