--- a/src/core/debug/CMakeLists.txt
+++ b/src/core/debug/CMakeLists.txt
@@ -2,4 +2,5 @@ target_sources(${TARGET}
 	PRIVATE
 		"${CMAKE_CURRENT_LIST_DIR}/logger.h"
 		"${CMAKE_CURRENT_LIST_DIR}/assert.h"
+		"${CMAKE_CURRENT_LIST_DIR}/assert.cpp"
 )
