refactor & addition of platform specific code

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -10,3 +10,4 @@ target_sources(${TARGET}
 include("${CMAKE_CURRENT_LIST_DIR}/utility/${CML}")
 include("${CMAKE_CURRENT_LIST_DIR}/memory/${CML}")
 include("${CMAKE_CURRENT_LIST_DIR}/debug/${CML}")
+include("${CMAKE_CURRENT_LIST_DIR}/platform/${CML}")
